Adding instructions for the complicated ADAM build I needed to do. Still can't export VCF on Mesos, but that's because of class loading issues.